--- a/inicio10.html
+++ b/inicio10.html
@@ -11,9 +11,11 @@
 </head>
 <body>
     <header>
-        <h1>Ejercicio 10 JavaScript</h1>
+        <h1>Ejercicio 11 JavaScript</h1>
     </header>
     <main>
+    <div id ="salida4"></div>
+    <div id ="salida3"></div>
     <div id ="salida"></div>
     <script>
         let dato1, dato2, num1, num2;
@@ -21,12 +23,12 @@
         num1 = parseInt(dato1);
         dato2 = window.prompt("Introduce segundo número ?", "0");
         num2 = parseInt(dato2);
-        let resultado = num1 - num2;
-        document.write("El primer numero es " + num1 );
+        let resultado2 = num1 - num2;
+        document.getElementById("salida4").innerHTML = (`El primer numero es ${num1} `);
         document.write("</br>");
-        document.write("El segundo numero es " + num2 );
+        document.getElementById("salida3").innerHTML = (`El segundo numero es ${num2} `);
         document.write("</br>");
-        document.getElementById("salida").innerHTML = (`La resta es ${resultado} `);
+        document.getElementById("salida").innerHTML = (`La Resta es ${resultado2} `);
        </script>
     </main>
     <footer>Dennis Alvarez Rodriguez 2022@</footer>
