ejercicio 13 y 14 corregido java

--- a/inicio14.html
+++ b/inicio14.html
@@ -2,28 +2,16 @@
 <html><head><meta charset="utf-8"></head>
 <script language="javascript">
 {
- var contador;
- contador=1;
+ var num;
+ var dato;
 
- while (contador<5)
+ while (num !=7)
  {
- let dato=prompt('Introduce número del 1 al 10:','');
- let num=parseInt(dato);
-
+ dato=prompt('Introduce número:','');
+ num=parseInt(dato);
  document.write(` El numero introducido es ${num} </br> `);
- document.write(` El contador es ${contador} </br> `);
-
- contador = contador +1 ;
  }
-
- document.write( ` </br><h2>
- Fin del programa
- contador ya NO es menor que 5.
- </h2>
- `);
-
  document.write (`</br> Ultimo numero introducido es ${num}`)
-
 }
 </script>
 </html>
