--- a/inicio13.html
+++ b/inicio13.html
@@ -3,13 +3,14 @@
 <script language="javascript">
 {
  var contador;
+ var num;
+ var dato;
  contador=1;
 
- //El error esta en que el contador esta a menor que cinco asi que siempre acabara antes de llegar a cinco por eso tenemos que poner menor o igual que cinco
  while (contador<=5)
  {
- let dato=prompt('Introduce número del 1 al 10:','');
- var num=parseInt(dato);
+ dato=prompt('Introduce número del 1 al 10:','');
+ num=parseInt(dato);
 
  document.write(` El numero introducido es ${num} </br> `);
  document.write(` El contador es ${contador} </br> `);
