--- a/forms9.html
+++ b/forms9.html
@@ -2,66 +2,125 @@
 <html>
 <head><meta charset="utf-8"/>
 <title> Entrada de Datos</title>
+<style>
+    .Cajita1{
+      padding: 20px;
+      font-size: 1.5em;
+      font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    }
+    .Cajita2{
+        padding: 20px;
+        font-size: 1.5em;
+        font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    }
+    .Cajita3{
+        padding: 20px;
+        font-size: 1.5em;
+        font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    }
+    form{
+        border: 2px solid black;
+        border-radius: 5px;
+    }
+    input{
+        background-color: yellow;
+    }
+</style>
+<style>
+input[type="number" i]{
+    width: 51px;
+}
+
+
+</style>
 <script>
- function calculaNota()
+var errores=[1,1,1,1]
+ 
+function hayError(){
+    if(errores.indexOf(1)== -1) return false;
+    else return true;
+}
+function calculaNota()
  {
-    porcentaje1=parseFloat(document.fdatos.porcentaje1.value)
-    porcentaje2=parseFloat(document.fdatos.porcentaje2.value)
-    nota1=parseFloat(document.fdatos.nota1.value)
-    nota2=parseFloat(document.fdatos.nota2.value)
-    document.getElementById("salida").innerHTML=nota1*porcentaje1/100 + nota2*porcentaje2/100;
- }
- function calculaPorcentaje1()
- {   
-    if (parseFloat(document.fdatos.porcentaje1.value)< 0 || (parseFloat(document.fdatos.porcentaje1.value) > 100)){
-        document.getElementById("e_porcentaje1").innerHTML="Error al poner numero"
+    if (!hayError()){
+        porcentaje1= parseFloat(document.fdatos.porcentaje1.value);
+        porcentaje2= parseFloat(document.fdatos.porcentaje2.value);
+        nota1 = parseFloat(document.fdatos.nota1.value);
+        nota2 = parseFloat(document.fdatos.nota2.value);
+        document.getElementById("nota").innerHTML=nota1*porcentaje1/100 + nota2*porcentaje2/100;
+        document.getElementById("salida").innerHTML=""
 
     }else{
-        document.getElementById("e_porcentaje1").innerHTML=""
-        document.fdatos.porcentaje2.value=100- parseFloat(document.fdatos.porcentaje1.value)
+        document.getElementById("nota").innerHTML="";
+        document.getElementById("salida").innerHTML="Revisa que todos los campos sean correctos"
+
     }
 
  }
- function calculaPorcentaje2()
- {
-    if (parseFloat(document.fdatos.porcentaje2.value)< 0 || (parseFloat(document.fdatos.porcentaje2.value) > 100)){
-        document.getElementById("e_porcentaje2").innerHTML="Error al poner numero"
-
+ function evaluarPorcentaje1(){
+    if ((parseFloat(document.fdatos.porcentaje1.value))< 0 || (parseFloat(document.fdatos.porcentaje1.value)>100)){
+        document.getElementById("e_porcentaje1").innerHTML="Error en el porcentaje";
+        errores[0]=1;
     }else{
-        document.getElementById("e_porcentaje2").innerHTML=""
+        document.getElementById("e_porcentaje1").innerHTML="";
+        document.fdatos.porcentaje2.value=100- parseFloat(document.fdatos.porcentaje1.value);
+        errores[0]=0;
+        errores[1]=0;
+    }   
+
+ }
+ function evaluarPorcentaje2(){
+    if ((parseFloat(document.fdatos.porcentaje2.value))< 0 || (parseFloat(document.fdatos.porcentaje2.value)>100)){
+        document.getElementById("e_porcentaje2").innerHTML="Error en el porcentaje";
+        errores[1]=1;
+    }else{
+        document.getElementById("e_porcentaje2").innerHTML="";
         document.fdatos.porcentaje1.value=100- parseFloat(document.fdatos.porcentaje2.value)
-    }
+        errores[1]=0;
+        errores[0]=0;
+    }   
+
  }
- function evaluarNota1()
- {
-    if (parseFloat(document.fdatos.nota1.value)< 0 || (parseFloat(document.fdatos.nota1.value) > 10)){
-        document.getElementById("e_nota1").innerHTML="Error al poner numero"
-
+ function evaluarNota1(){
+    if ((parseFloat(document.fdatos.nota1.value))< 0 || (parseFloat(document.fdatos.nota1.value)>10)){
+        document.getElementById("e_nota1").innerHTML="Error en la nota";
+        errores[2]=1;
     }else{
-        document.getElementById("e_nota1").innerHTML=""
+        document.getElementById("e_nota1").innerHTML="";
+        errores[2]=0;
+    }   
 
-    }
  }
- function evaluarNota2()
- {
-    if (parseFloat(document.fdatos.nota2.value)< 0 || (parseFloat(document.fdatos.nota2.value) > 10)){
-        document.getElementById("e_nota2").innerHTML="Error al poner numero"
-
+ function evaluarNota2(){
+    if ((parseFloat(document.fdatos.nota2.value))< 0 || (parseFloat(document.fdatos.nota2.value)>10)){
+        document.getElementById("e_nota2").innerHTML="Error en la nota";
+        errores[3]=1;
     }else{
-        document.getElementById("e_nota2").innerHTML=""
+        document.getElementById("e_nota2").innerHTML="";
+        errores[3]=0;
+    }   
 
-    }
  }
 </script>
 </head>
 <body>
-    <form name="fdatos">
-        Nota1: <input type="number" size="4" name="nota1" onchange="evaluarNota1()"/> <span id="e_nota1"></span>
-        Porcentaje: <input type="number" size="4" name="porcentaje1" onchange="calculaPorcentaje1()"/> <span id="e_porcentaje1"></span>
-        Nota2: <input type="number" size="4" name="nota2" onchange="evaluarNota2()"/> <span id="e_nota2"></span>
-        Porcentaje: <input type="number" size="4" name="porcentaje2" onchange="calculaPorcentaje2()"/> <span id="e_porcentaje2"></span>
-        <input type="button" name="calcula" value="CALCULAR" onclick="calculaNota()"> <span id="salida"></span>
-        <span id="nota"></span>
-    </form>
+
+<form name="fdatos">
+ <div class="Cajita1">
+    Nota1: <input type="number" size="4" name="nota1" onchange="evaluarNota1()"/> 
+    <span id="e_nota1"></span>
+    Porcentaje: <input type="number" size="4" name="porcentaje1" onchange="evaluarPorcentaje1()"/><span id="e_porcentaje1"></span>
+ </div>
+ <div class="Cajita2">
+ Nota2: <input type="number" size="4" name="nota2"onchange="evaluarNota2()"/> <span id="e_nota2"></span>
+ Porcentaje: <input type="number" size="4" name="porcentaje2" onchange="evaluarPorcentaje2()"/><span id="e_porcentaje2"></span>
+ </div>
+ <div class="Cajita3">
+ <input type="button" name="calcula" value="CALCULAR" onclick="calculaNota()" />
+ Nota ponderada: <span id="nota"></span>
+</div>
+</form>
+
+<div id ="salida"></div>
 </body>
 </html> 
